[tool.poetry]
name = "ahc017"
version = "0.1.0"
description = ""
authors = ["__ukun617 <11371960+hal0taso@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
